src/labs/02_lab-02/01_kubernetes manifest/06_frontend/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conference-app-frontend-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        app.kubernetes.io/name: frontend
        app.kubernetes.io/part-of: frontend
        app.kubernetes.io/version: v1.0.0
        keptn.sh/post-deployment-tasks: stdout-notification
    spec:
      containers:
      - name: frontend
        image: "salaboy/frontend-go-1739aa83b5e69d4ccb8a5615830ae66c:v1.0.0"
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /health/liveness
            port: 8080
        readinessProbe:
          httpGet:
            path: /health/readiness
            port: 8080
        ports:
        - containerPort: 8080
