src/labs/02_lab-02/01_kubernetes manifest/06_frontend/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: default
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 8080
